--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1 style='color:blue;'>Welcome to my page</h1>
+    <h1>Welcome to my page</h1>
     <h2>Here we have rainbows<h2>
     Hello, World!
 </body>
