--- a/hello.html
+++ b/hello.html
@@ -9,9 +9,8 @@
 
 <body>
     <h1 style='color:blue;'>Welcome to my page!!</h1>
-    <h2>Here we have rainbows
-        <h2>
-            Hello, World!
+    <h2>Here we have rainbows</h2>
+    Hello, World!
 </body>
 
 </html>
